# shannon_model

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  shannon_diccionario_datos.xlsx
.agents/skills/cavecrew/: README.md
.agents/skills/caveman/: README.md  SKILL.md
.cursor/rules/: caveman.mdc
configs/: default.yaml  editorial_opportunities.yaml  views_impact.yaml
docs/: COLAB.md  COLABORACION.md  FEATURES_BACKLOG.md  VIEWS_MODEL_FINDINGS.md
notebooks/: colab_pipeline.ipynb  colab_train.ipynb
openspec/: config.yaml
openspec/changes/category-impact-breakdown/: design.md  proposal.md  tasks.md
openspec/changes/colab-git-poll-loop/: design.md  proposal.md  tasks.md
openspec/changes/colab-pipeline-notebook/: design.md  proposal.md  tasks.md
openspec/changes/content-only-impact-model/: design.md  proposal.md  tasks.md
openspec/changes/data-quality-eda/: design.md  proposal.md  tasks.md
openspec/changes/es-breaking-redefinition/: design.md  proposal.md  tasks.md
openspec/changes/expand-url-source-csv/: design.md  proposal.md  tasks.md
openspec/changes/nlp-tone-polarity-features/: design.md  proposal.md  tasks.md
openspec/changes/predict-views-impact/: design.md  proposal.md  tasks.md
openspec/changes/scrape-news-content/: design.md  proposal.md  tasks.md
openspec/changes/scraper-reliability/: design.md  proposal.md  (+1 more)
scripts/: data_quality_report.py  report_editorial_opportunities.py  scrape_news.py  train.py  train_views_model.py
src/shannon_model/: __init__.py  config.py  model.py  train.py
(+52 files in other folders)
