[project]
name = "shannon-model"
version = "0.1.0"
description = "Entrenamiento de modelo reproducible (local + Google Colab)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "pyyaml>=6.0.1",
  "tqdm>=4.66.0",
  "scikit-learn>=1.4.0",
  "matplotlib>=3.8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
